welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: method pos has return statement; needs result type
			return true
                        ^SnakeBuggle:12: error: method pos has return statement; needs result type
				return true
                                ^SnakeBuggle:18: error: method pos has return statement; needs result type
				return true
                                ^